test/fail/invalid_params.fml
def sum(int a, int b):
	int c = a + b

sum (2)

